fix text from spacing

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -61,6 +61,7 @@ body {
 
 .list-item {
   display: flex;
+  white-space: nowrap;
 }
 
 .todo-text-container {
